# third_party_mtdev

./: BUILD.gn  COPYING  Makefile.in  OAT.xml  README.OpenSource  bundle.json  install.sh
patch/: BUILD.gn  apply_patch.sh
patch/diff_libmtdev_mmi/mtdev/: mtdev_0000.diff
src/: Makefile.in  common.h  core.c  state.h
test/: Makefile.in
